--- a/templates/account/cart.html
+++ b/templates/account/cart.html
@@ -37,12 +37,7 @@
                                             </figure>
                                         </td>
                                         <td>
-                                            <select class="form-control">
-                                                <option>1</option>
-                                                <option>2</option>
-                                                <option>3</option>
-                                                <option>4</option>
-                                            </select>
+                                           <p class="form-control">{{item_with_image.item.quantity}}</p>
                                         </td>
                                         <td>
                                             <div class="price-wrap">
