--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -7,6 +7,8 @@
 
 <title>My Store</title>
 
+<script src="https://unpkg.com/htmx.org@1.9.2"></script>
+
 
 <link rel="shortcut icon" type="image/x-icon" href="{% static 'images/file.png' %}">
 
@@ -37,85 +39,123 @@ $(document).ready(function() {
 }); 
 // jquery end
 </script>
-
+<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+<df-messenger
+  intent="WELCOME"
+  chat-title="Kira-mychatbot"
+  agent-id="63da02cc-5e0c-464d-bc1c-0bcc3d9149ab"
+  language-code="en"
+></df-messenger>
 </head>
 <body>
 
 	<header class="section-header">
-
-		<nav class="navbar navbar-dark navbar-expand p-0 bg-dark">
-		<div class="container">
-			<ul class="navbar-nav d-none d-md-flex mr-auto">
-				<li class="nav-item"><a class="nav-link" href="{% url 'home_page' %}">Home</a></li>
-				<!-- <li class="nav-item"><a class="nav-link" href="#">Delivery</a></li> -->
-				<li class="nav-item"><a class="nav-link" href="#">Payment</a></li>
-			</ul>
-			<ul class="navbar-nav">
-				<!-- <li class="nav-item"><a href="#" class="nav-link"> Call: +99812345678 </a></li> -->
-				<li class="nav-item dropdown">
-					 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown"> English </a>
-					<ul class="dropdown-menu dropdown-menu-right" style="max-width: 100px;">
-						<li><a class="dropdown-item" href="#">Hindi</a></li>
-						<li><a class="dropdown-item" href="#">Japanese</a></li>
+		<nav class="navbar navbar-dark navbar-expand-md bg-dark p-1">
+			<div class="container">
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon float-sm-right"></span>
+				</button>
+		
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item">
+							<a class="nav-link" href="{% url 'home_page' %}">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="{% url 'my_orders' %}">My Orders</a>
+						</li>
 					</ul>
-				</li>
-			</ul> <!-- list-inline //  -->
-		  </div> <!-- navbar-collapse .// -->
-		 <!-- container //  -->
+					<ul class="navbar-nav">
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="languageDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+								English
+							</a>
+							<ul class="dropdown-menu dropdown-menu-right" aria-labelledby="languageDropdown" style="max-width: 100px;">
+								<li><a class="dropdown-item" href="#">Hindi</a></li>
+								<li><a class="dropdown-item" href="#">Japanese</a></li>
+							</ul>
+						</li>
+					</ul>
+				</div> <!-- navbar-collapse .// -->
+			</div> <!-- container //  -->
 		</nav> <!-- header-top-light.// -->
 		
 		<section class="header-main border-bottom">
 			<div class="container">
-		<div class="row align-items-center">
-			<div class="col-lg-2 col-4">
-				<div class="brand-wrap">
-					<h3 class="store-name">My Store</h3>
-				</div> <!-- brand-wrap.// -->
-			</div>
-			<div class="col-lg-6 col-sm-12">
-				<form method="GET" action="{% url 'search_page' %}" class="search">
-					<div class="input-group w-100">
-						<input type="text" name="q" class="form-control" placeholder="Search" value="{{ query }}">
-						<div class="input-group-append">
-							<button class="btn btn-primary" type="submit">
-								<i class="fa fa-search"></i>
-							</button>
-						</div>
+				<div class="row align-items-center">
+					<!-- Store name -->
+					<div class="col-md-2 col-12">
+						<h3 class="store-name">My Store</h3>
 					</div>
-				</form> <!-- search-wrap .end// -->
-			</div> <!-- col.// -->
-			<div class="col-lg-4 col-sm-6 col-8">
-				<div class="widgets-wrap float-md-right">
-					<div class="widget-header  mr-3">
-						<a href="{% url 'cart_view' %}" class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></a>
-						<span class="badge badge-pill badge-danger notify">{{request.user.profile.get_cart_count}}</span>
+				
+					<!-- Search bar -->
+					<div class="col-md-5 col-sm-12">
+						<form method="GET" action="{% url 'search_page' %}" class="search">
+							<div class="input-group w-100">
+								<input type="text" name="q" class="form-control" placeholder="Search" value="{{ query }}">
+								<div class="input-group-append">
+									<button class="btn btn-primary" type="submit">
+										<i class="fa fa-search"></i>
+									</button>
+								</div>
+							</div>
+						</form>
 					</div>
-					<div class="widget-header icontext">
-						<a href="#" class="icon icon-sm rounded-circle border"><i class="fa fa-user"></i></a>
-						<div class="text">
-							{% if request.user.is_authenticated %}
-								<span class="text-muted">Welcome, {{ request.user.first_name }}!</span>
-								<div> 
-									<a href="{% url 'logout' %}">Logout</a>
-								</div>
-							{% else %}
-								<span class="text-muted">Welcome!</span>
-								<div> 
-									<a href="{% url 'login' %}">Sign in</a> |  
-									<a href="{% url 'register' %}">Register</a>
-								</div>
-							{% endif %}
-						</div>
+				
+					<!-- Cart icon -->
+					<div class="col-md-1 offset-md-1 col-2">
+						<div class="widgets-wrap float-md-right">
+							<div class="widget-header">
+								<a href="{% url 'cart_view' %}" class="icon icon-sm rounded-circle border">
+									<i class="fa fa-shopping-cart"></i>
+								</a>
+								<span class="badge badge-pill badge-danger notify">{{request.user.profile.get_cart_count}}</span>
 							</div>
 						</div>
 					</div>
-				</div> <!-- widgets-wrap.// -->
-			</div> <!-- col.// -->
-		</div> <!-- row.// -->
+				
+					<!-- User welcome message -->
+					<div class="col-md-3 col-10">
+						<div class="widgets-wrap ">
+							<div class="widget-header icontext">
+								<a href="{% url 'my_orders' %}" class="icon icon-sm rounded-circle border">
+									<i class="fa fa-user"></i>
+								</a>
+								<div class="text">
+									{% if request.user.is_authenticated %}
+										<span class="text-muted">Welcome, {{ request.user.first_name }}!</span>
+										<div>
+											<a href="{% url 'logout' %}">Logout</a>
+										</div>
+									{% else %}
+										<span class="text-muted">Welcome!</span>
+										<div>
+											<a href="{% url 'login' %}">Sign in</a> |  
+											<a href="{% url 'register' %}">Register</a>
+										</div>
+									{% endif %}
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				
 			</div> <!-- container.// -->
 		</section> <!-- header-main .// -->
 		</header>
-
+		<style>
+			@media (max-width: 576px) {
+				.store-name {
+					font-size: 1.25rem; /* Font size for small screens */
+				}
+			}
+		
+			@media (min-width: 768px) {
+				.store-name {
+					font-size: 2rem; /* Font size for larger screens */
+				}
+			}
+		</style>
 </body>
 </html>
 
